demo-app add