@@ -13,7 +13,7 @@ AWS CloudFormation 에서 스택 생성으로 vpc 생성을 합니다.
 
 ./env/eks_base_vpc.yaml
 
-```
+```yaml
 AWSTemplateFormatVersion: '2010-09-09'
 Description: EKS VPC Sample
 
@@ -48,19 +48,19 @@ Parameters:
 
   WorkerSubnet1Block:
     Type: String
-    Default: 10.90.0.0/24
+    Default: 10.90.10.0/24
 
   WorkerSubnet2Block:
     Type: String
-    Default: 10.90.1.0/24
+    Default: 10.90.20.0/24
 
   WorkerSubnet3Block:
     Type: String
-    Default: 10.90.2.0/24
+    Default: 10.90.30.0/24
   
   WorkerSubnet4Block:
     Type: String
-    Default: 10.90.3.0/24  
+    Default: 10.90.40.0/24  
 
 Resources:
   EKSWorkspaceVPC:
@@ -211,7 +211,7 @@ EKS Cluster 를 구성 및 배포를 위해 aws cli, eksctl, kubectl, java 등�
 
 ./env/ec2_workstation.yaml
 
-```
+```yaml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: EC2 Micro EKS Hub (workstation)
 
@@ -246,7 +246,7 @@ Resources:
       VpcId: !Ref VpcId
       GroupDescription: Enable SSH access via port 22
       SecurityGroupIngress:
-      - CidrIp:   0.0.0.0/32                                      # local PC IP
+      - CidrIp:   0.0.0.0/32                                      # local PC IP 로 변경하세요.
         FromPort: 22
         IpProtocol: tcp
         ToPort: 22
@@ -295,6 +295,12 @@ Outputs:
 
   SSHSecurityGroup:
     Value: !Ref SSHSecurityGroup
+
+  PublicIp:
+    Description: Workstation public ID  
+    Value: !GetAtt EKSWorkstation.PublicIp
+    Export:
+      Name: !Sub "${AWS::StackName}-PublicIp"
 ```
 
 amazon linux 2, SecurityGroup, 그리고 jdk 8, git, kubectl, eksctl 를 설치한 EC2 를 생성합니다.
@@ -308,6 +314,100 @@ amazon linux 2, SecurityGroup, 그리고 jdk 8, git, kubectl, eksctl 를 설치�
 생성이 끝나면 기술한 keypair 를 이용하여 eks-workstation 에 접속하여, git, eksctl, kubectl, java 등 version 을 확인 합니다. 
 
 ![EC2](./img/aws-ec201.png)
+
+### 3. EKS Cluster 생성
+
+eksctl, kubectl 명령, Application Build 등은 eks-workstation 에서 수행할 예정이다. 
+
+VPC 생성한 스택에서 Subnet 정보를 확인하여 eksctl 명령으로 eks-cluster 를 생성 합니다.
+
+![VPC-Subnet](./img/aws-cf04.png)
+
+예) subnet-0551a42afa8c75999,subnet-0ff94adb0d9db39ae,subnet-0f16c72f6f7830905
+
+```bash
+$eksctl create cluster --vpc-public-subnets subnet-062513305ee89bd64,subnet-05dff2b8efcc3cf7c,subnet-06f3b4e051ba96d1f --name eks-workspace-cluster --region ap-northeast-2 --version 1.21 --nodegroup-name eks-worksapce-nodegroup --node-type t2.small --nodes 2 --nodes-min 2 --nodes-max 5
+```
+
+![eks-command](./img/aws-eksctl01.png)
+
+eks-workstation 에서 명령을 내리면 위 처럼 진행 상태가 보입니다.
+
+![eks-command](./img/aws-eksctl00.png)
+
+CloudFormation 에서도 위 그림처럼 생성과정을 확인 할 수 있습니다.
+
+모든 리소스 생성이 끝나면 kubectl 로 node 상태를 확인 합니다. 
+
+```bash
+$kubectl get nodes
+NAME                                               STATUS   ROLES    AGE    VERSION
+ip-192-168-0-220.ap-northeast-2.compute.internal   Ready    <none>   5m     v1.21.5-eks-bc4871b
+ip-192-168-2-223.ap-northeast-2.compute.internal   Ready    <none>   5m6s   v1.21.5-eks-bc4871b
+```
+
+
+
+### 4. Application 생성
+
+Spring initializr 사이트에서 demo-app 을 하나 받아서 간단한 Appliation 을 하나 만든다.
+
+![demo-app](./img/spring-app00.png)
+
+DemoAppController.java
+
+```java
+package company.diem.demo.controller;
+
+import company.diem.demo.vo.DemoAppVO;
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@Slf4j
+@RestController
+public class DemoAppController {
+    @RequestMapping("/")
+    @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
+    public DemoAppVO getName() {
+        log.info("GET Name API Called");
+        DemoAppVO demoAppVO = new DemoAppVO();
+        demoAppVO.setName("DemoAPP");
+        demoAppVO.setDistributor("tambourine-man");
+        return demoAppVO;
+    }
+}
+
+```
+
+Dockerfile
+
+```dockerfile
+FROM amazonecorretto:8
+LABEL maintainer="tambourine-m"
+
+ENV LANG en_US.UTF8
+
+VOLUME /tmp
+ARG JAR_FILE
+COPY ${JAR_FILE} demo-app.jar
+
+ENTRYPOINT ["java", \
+ "-verbose:gc", \
+ "-Xlog:gc*:stdout:time,uptime,level,tags", \
+ "-Dservice.name=demo-app", \
+ "-jar", \
+ "/demo-app.jar"]
+```
+
+
+
+### 5. EKS 에 Applicatoin 배포
+
+### 6. 
 
 
 
